--- a/templates/package.json
+++ b/templates/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "~5.2.3",
     "highlight.js": "^11.7.0",
     "jquery": "~3.6.3",
-    "lit-html": "^2.6.1",
+    "jsx-dom": "^8.0.5",
     "lunr": "2.3.9",
     "mark.js": "^8.4.0",
     "twbs-pagination": "josecebe/twbs-pagination#1.3.1"
