--- a/templates/package.json
+++ b/templates/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "anchor-js": "^5.0.0",
-    "bootstrap": "~5.2.3",
+    "bootstrap": "~5.3.0-alpha1",
     "highlight.js": "^11.7.0",
     "jquery": "~3.6.3",
     "jsx-dom": "^8.0.5",
